<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.opet.tds.estoqueapp.MainActivity">

    <EditText
        android:id="@+id/editNomeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stringNomeProduto"/>
    <TextView
        android:id="@+id/textVencimentoProdutoInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stringDataVencimentoProduto"/>
    <Button
        android:text="@string/stringBtnSalvarProduto"
        android:onClick="salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <GridLayout
        android:rowCount="2"
        android:columnCount="2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/textLabelNomeProduto"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/textNomeProduto"
            android:textSize="16sp"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/textLabelVencimentoProduto"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/textVencimentoProduto"
            android:textSize="16sp"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </GridLayout>



</LinearLayout>
